--- a/force-app/main/default/classes/CurrencyFormatter.cls
+++ b/force-app/main/default/classes/CurrencyFormatter.cls
@@ -2,4 +2,5 @@ public class CurrencyFormatter {
     public static String formatCurrency(Decimal amount) {
         return '$' + String.valueOf(amount.setScale(2));
     }
+    ///change 
 }
