--- a/force-app/main/default/classes/ContactUtils.cls
+++ b/force-app/main/default/classes/ContactUtils.cls
@@ -2,5 +2,5 @@ public class ContactUtils {
     public static Boolean isEmailValid(Contact con) {
         return con.Email != null && con.Email.contains('@');
     }
-    //change 
+    //change ..............................................................
 }
